Creating a message down to the code

--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -114,10 +114,11 @@
         </div>
 
         <div class="modal-body">
-            <form>
+            <form action="/" method="post" onsubmit="depositMoneyToDb(event)">
                 <div class="form-group">
                     <label for="depositMoneyInput">Deposit Input</label>
-                    <input type="number" class="form-control" id="depositMoneyInput" aria-describedby="Deposit Help" placeholder="Enter amount">
+                    <input type="number" class="form-control" id="depositMoneyInput" aria-describedby="Deposit Help"
+                           placeholder="Enter amount" name="depositMoneyInput">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
@@ -130,33 +131,7 @@
 
 </div>
 
-<script>
-    // Get the modal
-    var depositModal = document.getElementById("depositModal");
-
-    // Get the button that opens the modal
-    var depositBtn = document.getElementById("depositButton");
-
-    // Get the <span> element that closes the modal
-    var span = document.getElementsByClassName("close")[0];
-
-    // When the user clicks the button, open the modal
-    depositBtn.onclick = function () {
-        depositModal.style.display = "block";
-    }
-
-    // When the user clicks on <span> (x), close the modal
-    span.onclick = function () {
-        depositModal.style.display = "none";
-    }
-
-    // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function (event) {
-        if (event.target == modal) {
-            depositModal.style.display = "none";
-        }
-    }
-</script>
+<script src="/assets/js/index.js"></script>
 
 </body>
 </html>
