--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -123,7 +123,8 @@
             <form action="/" method="post" onsubmit="depositMoneyToDb(event)">
                 <div class="form-group">
                     <label for="depositMoneyInput">Deposit Input</label>
-                    <input type="number" class="form-control" id="depositMoneyInput" aria-describedby="Deposit Help"
+                    <input type="number" min="0.00" max="10000.00" step="0.01"
+                           class="form-control" id="depositMoneyInput" aria-describedby="Deposit Help"
                            placeholder="Enter amount" name="depositMoneyInput">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
