--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -100,16 +100,53 @@
         button.bg-primary:focus {
             background-color: #0BDA51 !important;
         }
+
+        a.bg-secondary:hover, a.bg-secondary:focus,
+        button.bg-secondary:hover,
+        button.bg-secondary:focus {
+            background-color: #FF0000 !important;
+        }
     </style>
 </head>
 <body>
 
 <h2>Welcome to Money Pot</h2>
 
-<!-- Trigger/Open The Modal -->
+<!-- Trigger/Open Deposit Modal -->
 <button id="depositButton" class="bg-primary">Deposit Money</button>
+<!-- Trigger/Open Withdraw Modal -->
+<button id="withdrawButton" class="bg-secondary">Deposit Money</button>
 
-<!-- The Modal -->
+<!-- Withdraw Modal -->
+<div id="withdrawModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+        <div class="modal-header">
+            <span class="close">&times;</span>
+            <h2>Withdraw Money From Pot</h2>
+        </div>
+
+        <div class="modal-body">
+            <form action="/" method="post" onsubmit="withdrawMoneyToDb(event)">
+                <div class="form-group">
+                    <label for="withdrawMoneyInput">Deposit Input</label>
+                    <input type="number" min="0.00" max="10000.00" step="0.01"
+                           class="form-control" id="withdrawMoneyInput" aria-describedby="Withdraw Help"
+                           placeholder="Enter amount" name="withdrawMoneyInput">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+
+        <div class="modal-footer">
+            <h3>Note: All actions are logged to Google Sheets</h3>
+        </div>
+    </div>
+
+</div>
+
+<!-- Deposit Modal -->
 <div id="depositModal" class="modal">
 
     <!-- Modal content -->
