--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -1,5 +1,5 @@
 {{ define "index" }}
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -85,6 +85,12 @@
             color: white;
         }
 
+        .modal-header-Withdraw {
+            padding: 2px 16px;
+            background-color: #FF0000;
+            color: white;
+        }
+
         .modal-body {
             padding: 16px 16px;
         }
@@ -92,6 +98,12 @@
         .modal-footer {
             padding: 2px 16px;
             background-color: #0BDA51;
+            color: white;
+        }
+
+        .modal-footer-withdraw {
+            padding: 2px 16px;
+            background-color: #FF0000;
             color: white;
         }
 
@@ -114,15 +126,20 @@
 
 <!-- Trigger/Open Deposit Modal -->
 <button id="depositButton" class="bg-primary">Deposit Money</button>
+
+</br>
+
+</br>
+
 <!-- Trigger/Open Withdraw Modal -->
-<button id="withdrawButton" class="bg-secondary">Deposit Money</button>
+<button id="withdrawButton" class="bg-secondary">Withdraw Money</button>
 
 <!-- Withdraw Modal -->
 <div id="withdrawModal" class="modal">
 
     <!-- Modal content -->
     <div class="modal-content">
-        <div class="modal-header">
+        <div class="modal-header-Withdraw">
             <span class="close">&times;</span>
             <h2>Withdraw Money From Pot</h2>
         </div>
@@ -130,7 +147,7 @@
         <div class="modal-body">
             <form action="/" method="post" onsubmit="withdrawMoneyToDb(event)">
                 <div class="form-group">
-                    <label for="withdrawMoneyInput">Deposit Input</label>
+                    <label for="withdrawMoneyInput">Withdraw Input</label>
                     <input type="number" min="0.00" max="10000.00" step="0.01"
                            class="form-control" id="withdrawMoneyInput" aria-describedby="Withdraw Help"
                            placeholder="Enter amount" name="withdrawMoneyInput">
@@ -139,7 +156,7 @@
             </form>
         </div>
 
-        <div class="modal-footer">
+        <div class="modal-footer-withdraw">
             <h3>Note: All actions are logged to Google Sheets</h3>
         </div>
     </div>
