Adding in live pot updates

--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -1,5 +1,6 @@
 {{ define "index" }}
-<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+      xmlns="http://www.w3.org/1999/html">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -122,7 +123,9 @@
 </head>
 <body>
 
-<h2>Welcome to Money Pot</h2>
+<h2 style="text-align: center">Welcome to Money Pot</h2>
+<h2 style="float: right" id="liveAmount">Live Amount</h2>
+
 
 <!-- Trigger/Open Deposit Modal -->
 <button id="depositButton" class="bg-primary">Deposit Money</button>
