Fixing the connection and live amount to the right of the screen

--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -146,10 +146,11 @@
     <h2 id="liveAmount">Live Amount Not Connected</h2>
 
     <div>
-        <h3 style="position: absolute; right: 0">Connection Status</h3>
+        <h3 style="position: absolute; right: 12px">Connection Status</h3>
         <br>
         <br>
-        <div class="box red" id="connectionStatusBox" style="position: absolute; right: 0"></div></div>
+        <div class="box red" id="connectionStatusBox" style="position: absolute; right: 10px;"></div>
+    </div>
 </div>
 
 <!-- Trigger/Open Deposit Modal -->
